--- a/cfg/compliance_param.cfg
+++ b/cfg/compliance_param.cfg
@@ -5,9 +5,9 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("translational_stiffness", double_t, 0, "Cartesian translational stiffness", 2000, 0, 6000) #2000, 0, 4000
-gen.add("translational_damping", double_t, 0, "Cartesian translational damping", 130, 0, 400)
-gen.add("rotational_stiffness", double_t, 0, "Cartesian rotational stiffness", 250, 0, 300)
+gen.add("translational_stiffness", double_t, 0, "Cartesian translational stiffness", 2000, 0, 6000)
+gen.add("translational_damping", double_t, 0, "Cartesian translational damping", 89, 0, 400)
+gen.add("rotational_stiffness", double_t, 0, "Cartesian rotational stiffness", 150, 0, 300)
 gen.add("rotational_damping", double_t, 0, "Cartesian rotational damping", 7, 0, 30)
 gen.add("nullspace_stiffness", double_t, 0, "Stiffness of the joint space nullspace controller (the desired configuration is the one at startup)", 0.2, 0, 100)
 gen.add("joint1_nullspace_stiffness", double_t, 0, "Stiffness of the joint space nullspace controller (the desired configuration is the one at startup)", 100, 0, 100)
